# nbabel

./: .gitignore  .hgignore  .hgtags  README.md
cpp/: Makefile  main.cpp  main_opt_algo.cpp  main_opt_all.cpp  raw_code.txt  write_rawcpp.py
fortran/: Makefile  nbabel.f03
julia/: .README.md.swp  .swp  Makefile  README.md  naive_bad.jl  naive_better.jl  naive_lowlevel.jl  nbabel.jl  nbabel3.jl  nbabel3_serial.jl  (+9 more)
py/: Makefile  README.md  bench.py  bench0.py  bench_compyler.py  bench_more_opti.py  bench_numba.py  bench_numpy_highlevel.py  bench_numpy_highlevel_jit.py  bench_omp.py  bench_purepy.py  bench_purepy_Particle.py  bench_purepy_Point.py  bench_purepy_particle.py  bench_pypy.py  bench_pypy4.py  bench_pypy4_tuple.py  bench_pypy_Point.py  bench_short.py  bench_transonic_numba.py  compute_acc_alt.py  microbench.md  microbench_hpyvec.py  microbench_ju4.jl  microbench_pypy4.py  microbench_pypy_list.py  microbench_sum_x.jl  microbench_sum_x.py  piconumpy_purepy.py  pyproject.toml  raw.py  raw_code.txt  requirements.txt  vector.md  vector.py  vector_v2.md  vector_v2_simpler.md  write_rawpy.py
py/CLBG/: nbody_origin.py
py/microbench/: Makefile  README.md  microbench_cffi.py  microbench_cython.py  microbench_ju_tuple.jl  microbench_pypy4.py  microbench_pypy_particle.py  microbench_pythran.py  microbench_pythran_omp.py  microbench_simd.py  microbench_simd_ravel.py  microbench_sum_x.jl  microbench_sum_x.py  microbench_util.jl  util_cython.pyx  vector.py
rust/nbabel-nbody/: Cargo.toml
rust/nbabel-nbody/src/: lib.rs  main.rs  parallel_simd.rs  scalar.rs  simd.rs
(+81 files in other folders)
